<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros_mocap_control_plugin</name>
  <version>2.0.0</version>
  <description>The mujoco_ros_mocap_control_plugin package</description>

  <maintainer email="balazs.andras.balint@ipa.fraunhofer.de">Balázs András Bálint</maintainer>

  <license>BSD-3-Clause</license>

  <author email="balazs.andras.balint@ipa.fraunhofer.de">Balázs András Bálint</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend version_gte="0.8.0" version_lt="0.9.0">mujoco_ros</depend>

  <export>
    <mujoco_ros plugin="${prefix}/mocap_control_plugin.xml" />
  </export>

</package>
